<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>com.tabulify</groupId>
  <artifactId>tabulify</artifactId>
  <name>Tabulify</name>
  <packaging>pom</packaging>
  <version>0.1.0-SNAPSHOT</version>

  <parent>
    <groupId>com.eraldy</groupId>
    <artifactId>eraldy-core-aggregator</artifactId>
    <version>0.1.0-SNAPSHOT</version>
  </parent>

  <!-- Scm is mandatory for the release plugin  -->
  <!-- https://maven.apache.org/maven-release/maven-release-plugin/usage.html -->
  <!-- https://maven.apache.org/scm/git.html -->
  <scm>
    <developerConnection>scm:git://github.com:tabulify/tabulify.git</developerConnection>
  </scm>

  <properties>

    <!-- Disco Api values used to download the jdk https://github.com/foojayio/discoapi   -->
    <maven.compiler.source>11.0.26</maven.compiler.source>
    <maven.compiler.target>11.0.26</maven.compiler.target>
    <!-- 11.0.26 release version not supported   -->
    <maven.compiler.release>11</maven.compiler.release>
    <!-- Disco Api values used to download the jdk https://github.com/foojayio/discoapi   -->
    <jdk.distribution>temurin</jdk.distribution>

    <jreleaser.version>1.17.0</jreleaser.version>
    <parent.parent.version>0.1.0-SNAPSHOT</parent.parent.version>
  </properties>


  <modules>
    <module>tabulify-core</module>
    <module>tabulify-cli</module>
    <module>tabulify-flow</module>
    <module>tabulify-json</module>
    <module>tabulify-jdbc</module>
    <module>tabulify-data-generation</module>
    <module>tabulify-csv</module>
    <module>tabulify-templating</module>
    <module>tabulify-email</module>
    <module>tabulify-xml</module>
    <module>tabulify-yaml</module>
    <module>tabulify-sqlite</module>
    <module>tabulify-html</module>
    <module>tabulify-excel</module>
    <module>tabulify-oracle</module>
    <module>tabulify-sqlserver</module>
    <module>tabulify-mysql</module>
    <module>tabulify-docker</module>
    <module>tabulify-zip</module>
  </modules>

  <!-- The rest of dependencies management is in core  -->
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>tabulify-core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>tabulify-flow</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>tabulify-json</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>tabulify-jdbc</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>tabulify-sqlite</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>tabulify-docker</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>tabulify-data-generation</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>tabulify-csv</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>tabulify-yaml</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>tabulify-excel</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>tabulify-templating</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>tabulify-xml</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>tabulify-html</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>tabulify-email</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>tabulify-oracle</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>tabulify-sqlserver</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>tabulify-mysql</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>tabulify-zip</artifactId>
        <version>${project.version}</version>
      </dependency>
      <!-- Eraldy -->
      <dependency>
        <groupId>com.eraldy</groupId>
        <artifactId>eraldy-log</artifactId>
        <version>${parent.parent.version}</version>
      </dependency>
      <dependency>
        <groupId>com.eraldy</groupId>
        <artifactId>eraldy-core</artifactId>
        <version>${parent.parent.version}</version>
      </dependency>
      <dependency>
        <groupId>com.eraldy</groupId>
        <artifactId>eraldy-niofs-http</artifactId>
        <version>${parent.parent.version}</version>
      </dependency>
      <dependency>
        <groupId>com.eraldy</groupId>
        <artifactId>eraldy-docker</artifactId>
        <version>${parent.parent.version}</version>
      </dependency>
      <dependency>
        <groupId>com.eraldy</groupId>
        <artifactId>eraldy-test</artifactId>
        <version>${parent.parent.version}</version>
      </dependency>
      <dependency>
        <groupId>com.eraldy</groupId>
        <artifactId>eraldy-template</artifactId>
        <version>${parent.parent.version}</version>
      </dependency>
      <dependency>
        <groupId>com.eraldy</groupId>
        <artifactId>eraldy-html</artifactId>
        <version>${parent.parent.version}</version>
      </dependency>
      <dependency>
        <groupId>com.eraldy</groupId>
        <artifactId>eraldy-xml</artifactId>
        <version>${parent.parent.version}</version>
      </dependency>
      <dependency>
        <groupId>com.eraldy</groupId>
        <artifactId>eraldy-email</artifactId>
        <version>${parent.parent.version}</version>
      </dependency>
      <dependency>
        <groupId>com.eraldy</groupId>
        <artifactId>eraldy-smtp-client</artifactId>
        <classifier>tests</classifier>
        <type>test-jar</type>
        <scope>test</scope>
        <version>${parent.parent.version}</version>
      </dependency>
      <dependency>
        <groupId>com.eraldy</groupId>
        <artifactId>eraldy-smtp-client</artifactId>
        <version>${parent.parent.version}</version>
      </dependency>
      <dependency>
        <groupId>com.eraldy</groupId>
        <artifactId>eraldy-cli</artifactId>
        <version>${parent.parent.version}</version>
      </dependency>
      <dependency>
        <groupId>com.eraldy</groupId>
        <artifactId>eraldy-doc-exec</artifactId>
        <version>${parent.parent.version}</version>
      </dependency>
      <!-- from https://jdbc.postgresql.org/download.html -->
      <!-- 42.2.16 is the current version of the driver. This is the driver you should be using.-->
      <!-- It supports PostgreSQL 8.2 or newer and requires Java 6 or newer. It contains support for SSL and the javax.sql package.-->
      <dependency>
        <groupId>org.postgresql</groupId>
        <artifactId>postgresql</artifactId>
        <version>42.7.8</version>
      </dependency>
      <!-- ojdbc8 means certified with jdk8 -->
      <!-- https://repo1.maven.org/maven2/com/oracle/database/jdbc/ojdbc8/ -->
      <!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc11 -->
      <dependency>
        <groupId>com.oracle.database.jdbc</groupId>
        <artifactId>ojdbc11</artifactId>
        <version>23.7.0.25.01</version>
      </dependency>
      <!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
      <dependency>
        <groupId>com.microsoft.sqlserver</groupId>
        <artifactId>mssql-jdbc</artifactId>
        <version>13.2.0.jre11</version>
      </dependency>
      <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
      <dependency>
        <groupId>com.mysql</groupId>
        <artifactId>mysql-connector-j</artifactId>
        <version>9.2.0</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <source>1.11</source>
            <target>1.11</target>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <configuration>
            <excludedGroups>slow</excludedGroups>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>default</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <excludedGroups>slow</excludedGroups>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>all-tests</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <!-- No exclusions -->
              <excludedGroups></excludedGroups>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>slow-tests-only</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <groups>slow</groups>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
